Quorum/Library/Tests/Templating/Fail/BadGeneric.quorum
use Libraries.Containers.Array

class Main
    action Main
        Array array
        array:Add(junk)
    end
end